force-app/main/default/objects/DHS_Case__c/DHS_Case__c.object-meta.xml
<CustomObject>
    <label>Case</label>
    <nameField>
        <displayFormat>Case-{000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>