force-app/main/default/objects/DHS_Case__c/fields/Assignee_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Date__c</fullName>
    <label>Assignee Date</label>
    <type>Date</type>
</CustomField>