force-app/main/default/objects/DHS_Case__c/fields/Case_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Due Date</label>
    <type>Date</type>
</CustomField>