force-app/main/default/objects/DHS_Case__c/fields/Case_Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Status__c</fullName>
    <label>Case Queue Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>