force-app/main/default/objects/DHS_Case__c/fields/Coverage_Period_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period_Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Period Begin Date</label>
    <type>Date</type>
</CustomField>