force-app/main/default/objects/DHS_Case__c/fields/Customer_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_Number__c</fullName>
    <label>Customer Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>