force-app/main/default/objects/DHS_Case__c/fields/Customer_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delivery_Date__c</fullName>
    <label>Customer Delivery Date</label>
    <type>Date</type>
</CustomField>