force-app/main/default/objects/DHS_Case__c/fields/Delivered_with_pending_lead__c.field-meta.xml
<CustomField>
    <fullName>Delivered_with_pending_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivered with pending lead</label>
    <type>Checkbox</type>
</CustomField>