force-app/main/default/objects/DHS_Case__c/fields/DHS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>DHS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Assigned_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>