force-app/main/default/objects/DHS_Case__c/fields/DHS_Order__c.field-meta.xml
<CustomField>
    <fullName>DHS_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>DHS_Customer_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>DHS_Order_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>