force-app/main/default/objects/DHS_Case__c/fields/End_Purge_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Purge_Date__c</fullName>
    <label>End Purge Date</label>
    <type>Date</type>
</CustomField>