force-app/main/default/objects/DHS_Case__c/fields/Former_Spouse_Count__c.field-meta.xml
<CustomField>
    <fullName>Former_Spouse_Count__c</fullName>
    <label>Former Spouse Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>