force-app/main/default/objects/DHS_Case__c/fields/Investigations_Date__c.field-meta.xml
<CustomField>
    <fullName>Investigations_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigations Date</label>
    <type>Date</type>
</CustomField>