force-app/main/default/objects/DHS_Case__c/fields/Investigations_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Investigations_Review_Date__c</fullName>
    <label>Investigations Review Date</label>
    <type>Date</type>
</CustomField>