force-app/main/default/objects/DHS_Case__c/fields/Law_Enforcement_Count__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Count__c</fullName>
    <label>Law Enforcement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>