force-app/main/default/objects/DHS_Case__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manifest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>