force-app/main/default/objects/DHS_Case__c/fields/Medical_Count__c.field-meta.xml
<CustomField>
    <fullName>Medical_Count__c</fullName>
    <label>Medical Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>