force-app/main/default/objects/DHS_Case__c/fields/OntimeLateCancelled__c.field-meta.xml
<CustomField>
    <fullName>OntimeLateCancelled__c</fullName>
    <label>Ontime/Late/Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>