force-app/main/default/objects/DHS_Case__c/fields/PAEI_Count__c.field-meta.xml
<CustomField>
    <fullName>PAEI_Count__c</fullName>
    <label>PAEI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>