force-app/main/default/objects/DHS_Case__c/fields/PPF_Customer_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>PPF_Customer_Contact_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPF Customer Contact Address</label>
    <type>TextArea</type>
</CustomField>