force-app/main/default/objects/DHS_Case__c/fields/PPF_Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>PPF_Customer_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPF Customer Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>