force-app/main/default/objects/DHS_Case__c/fields/PPF_Customer_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PPF_Customer_Contact_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPF Customer Contact Phone Number</label>
    <type>Phone</type>
</CustomField>