force-app/main/default/objects/DHS_Case__c/fields/Purge_Date__c.field-meta.xml
<CustomField>
    <fullName>Purge_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purge Date</label>
    <type>Date</type>
</CustomField>