force-app/main/default/objects/DHS_Case__c/fields/QA_and_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_and_Review_Date__c</fullName>
    <label>QA and Review Date</label>
    <type>Date</type>
</CustomField>