force-app/main/default/objects/DHS_Case__c/fields/References_Count__c.field-meta.xml
<CustomField>
    <fullName>References_Count__c</fullName>
    <label>References Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>