force-app/main/default/objects/DHS_Case__c/fields/RMS_Last_Reconciled_Date__c.field-meta.xml
<CustomField>
    <fullName>RMS_Last_Reconciled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RMS Last Reconciled Date</label>
    <type>DateTime</type>
</CustomField>