force-app/main/default/objects/DHS_Case__c/fields/RMS_Return_Flag_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>RMS_Return_Flag_Applied_Date__c</fullName>
    <label>RMS Return Flag Applied Date</label>
    <type>Date</type>
</CustomField>