force-app/main/default/objects/DHS_Case__c/fields/RMS_Return_Flag_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>RMS_Return_Flag_Batch_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RMS Return Flag Batch Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>