force-app/main/default/objects/DHS_Case__c/fields/RMS_Return_Flag_Notes__c.field-meta.xml
<CustomField>
    <fullName>RMS_Return_Flag_Notes__c</fullName>
    <label>RMS Return Flag Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>