force-app/main/default/objects/DHS_Case__c/fields/RMS_Return_Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>RMS_Return_Flag_Status__c</fullName>
    <label>RMS Return Flag Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flagged for Return</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>