force-app/main/default/objects/DHS_Case__c/fields/RMS_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>RMS_Return_Status__c</fullName>
    <label>RMS Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Manifest Generated</fullName>
            </value>
            <value>
                <fullName>No Materials</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>