force-app/main/default/objects/DHS_Case__c/fields/Scoping_Date__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Date__c</fullName>
    <label>Scoping Date</label>
    <type>Date</type>
</CustomField>