force-app/main/default/objects/DHS_Case__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>