force-app/main/default/objects/DHS_Case__c/fields/Subheader_packaged_date_by_CMO__c.field-meta.xml
<CustomField>
    <fullName>Subheader_packaged_date_by_CMO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subheader packaged date by CMO</label>
    <type>Date</type>
</CustomField>