force-app/main/default/objects/DHS_Case__c/fields/Subject_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Subject_Contact_Count__c</fullName>
    <label>Subject Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>