force-app/main/default/objects/DHS_Case__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <formula>DHS_Contact__r.Last_Name__c + &apos; &apos; +DHS_Contact__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Name</label>
    <type>Text</type>
</CustomField>