force-app/main/default/objects/DHS_Case__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>