force-app/main/default/objects/DHS_Case__c/fields/Total_References_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_References_Count__c</fullName>
    <label>Total References Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>