force-app/main/default/objects/DHS_Case__c/fields/Validate_Transmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Validate_Transmission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validate Transmission Date</label>
    <type>Date</type>
</CustomField>