force-app/main/default/objects/DHS_Case__c/fields/Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Number</label>
    <type>Checkbox</type>
</CustomField>