force-app/main/default/objects/DHS_Case__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Assigned_To_Name__c</columns>
    <columns>PPF_Customer_Contact_Name__c</columns>
    <columns>PPF_Customer_Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Task__c</field>
        <operation>equals</operation>
        <value>QA Review Completed</value>
    </filters>
    <label>Completed</label>
</ListView>