force-app/main/default/objects/DHS_Case__c/listViews/DHS_Completed.listView-meta.xml
<ListView>
    <fullName>DHS_Completed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_Completed</label>
</ListView>